<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_next"
        android:icon="@drawable/ic_next"
        android:title="@string/title_next" />

    <item
        android:id="@+id/navigation_done"
        android:icon="@drawable/ic_done_all_black_24dp"
        android:title="@string/title_done" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_profile" />

<!--    <item-->
<!--        android:id="@+id/navigation_follow"-->
<!--        android:icon="@drawable/ic_trending_up_black_24dp"-->
<!--        android:title="@string/title_follow" />-->

</menu>
